--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 .vscode
 
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
